--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Inknut+Antiqua|Roboto&display=swap');
 
 body {
-	background: url("https://image.freepik.com/free-vector/memphis-pattern-background_53876-85418.jpg");
-	opacity:0.5;
+	background: url("https://image.freepik.com/free-vector/memphis-pattern-background_53876-85418.jpg") opacity:0.5;
 	background-repeat: repeat;
 	background-size: auto;
 	font-family: font-family: 'Roboto', sans-serif;
