--- a/unit_3/css/style.css
+++ b/unit_3/css/style.css
@@ -22,6 +22,12 @@ h2 {
 	font-style: bold;
 }
 
+h3 {
+	font-size: 20px;
+	line-height: 20px;
+	font-style: bold;
+}
+
 p {
 	font-family: 'Roboto', sans-serif;
 	font-size: 20px;
@@ -32,6 +38,15 @@ p {
 
 a {
 	text-decoration: underline;
+	color:#000000;
+}
+
+a:hover {
+	color:#002fa7;
+}
+
+a:visited {
+  color: #000000;
 }
 
 .contact {
@@ -57,8 +72,6 @@ ol {
 }
 
 img {
-	border: 10px dashed #002fa7;
-	padding: 5px;
 	width: 500px;
 }
 
@@ -66,7 +79,7 @@ img {
 	display: block;
 	margin-left:auto;
 	margin-right:auto;
-	width: 75%;
+	width: 50%;
 }
 
 #slogan {
@@ -77,7 +90,7 @@ img {
 }
 
 hr {
-	border-top: 2px dotted #696969;
+	border-top: 5px dotted #000000;
 }
 
 #footer {
